feat: Update model for Admin Site
